@@ -7,3 +7,29 @@
 ## 关闭格式化程序
   * 开: @formatter:on
   * 关: @formatter:off
+
+## vm
+  ```
+  -Xms128m
+  -Xmx20480m
+  -XX:ReservedCodeCacheSize=512m
+  -XX:+IgnoreUnrecognizedVMOptions
+  -XX:+UseG1GC
+  -XX:SoftRefLRUPolicyMSPerMB=50
+  -XX:CICompilerCount=2
+  -XX:+HeapDumpOnOutOfMemoryError
+  -XX:-OmitStackTraceInFastThrow
+  -ea
+  -Dsun.io.useCanonCaches=false
+  -Djdk.http.auth.tunneling.disabledSchemes=""
+  -Djdk.attach.allowAttachSelf=true
+  -Djdk.module.illegalAccess.silent=true
+  -Dkotlinx.coroutines.debug=off
+  -XX:ErrorFile=$USER_HOME/java_error_in_idea_%p.log
+  -XX:HeapDumpPath=$USER_HOME/java_error_in_idea.hprof
+  
+  --add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED
+  --add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED
+  
+  -javaagent:C:\jetbra\ja-netfilter.jar=jetbrains
+  ```
